introduce PosToken object

--- a/ui/src/app/part-of-speech/part-of-speech.component.html
+++ b/ui/src/app/part-of-speech/part-of-speech.component.html
@@ -1,4 +1,2 @@
 <app-pos-tag
-        [token]='token'
-        [tag]='tag'
-        [tagName]='tagName'></app-pos-tag>
+        [pos]='posTokens[0]'></app-pos-tag>
