enhance tag style

--- a/ui/src/app/pos-tag/pos-tag.component.html
+++ b/ui/src/app/pos-tag/pos-tag.component.html
@@ -1,3 +1,4 @@
 <div>
-    <div>{{pos.token}} {{pos.tag}} {{pos.tagName}}</div>
+  <label class="tag">{{pos.tag}}</label>
+    <div>{{pos.token}}  {{pos.tagName}}</div>
 </div>
