make it center aligned

--- a/ui/src/app/pos-tag/pos-tag.component.html
+++ b/ui/src/app/pos-tag/pos-tag.component.html
@@ -1,4 +1,6 @@
-<div>
-  <label class="tag">{{pos.tag}}</label>
-    <div>{{pos.token}}  {{pos.tagName}}</div>
+<div class="pos-component">
+  <label class="pos-tag">{{pos.tag}}</label>
+  <div>
+    <label class="pos-token">{{pos.token}}</label>
+  </div>
 </div>
