--- a/ui/src/app/pos-tag/pos-tag.component.css
+++ b/ui/src/app/pos-tag/pos-tag.component.css
@@ -1,5 +1,16 @@
-.tag {
+.pos-component {
+  text-align: center;
+}
+
+.pos-tag {
   background-color: coral;
+  border-radius: 8px;
+  padding: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.pos-token {
+  background-color: cornflowerblue;
   border-radius: 8px;
   padding: 1px;
   padding-left: 5px;
