enhance nlp input component

--- a/ui/src/app/nlp-input/nlp-input.component.html
+++ b/ui/src/app/nlp-input/nlp-input.component.html
@@ -1,3 +1,6 @@
-<p>
-  nlpinput works!
-</p>
+<div class="nlp-input">
+  <textarea class="nlp-input-box" cols="60" rows="5"></textarea>
+  <div>
+    <button>Process</button>
+  </div>
+</div>
