create part of speech service

--- a/ui/src/app/visual-nlp/visual-nlp.component.html
+++ b/ui/src/app/visual-nlp/visual-nlp.component.html
@@ -1,2 +1,5 @@
 
-<app-part-of-speech></app-part-of-speech>
+<div>
+  <app-nlp-input></app-nlp-input>
+    <app-part-of-speech></app-part-of-speech>
+</div>
