make nlp-input stateless

--- a/ui/src/app/nlp-input/nlp-input.component.html
+++ b/ui/src/app/nlp-input/nlp-input.component.html
@@ -1,5 +1,5 @@
 <div class="nlp-input">
-  <textarea class="nlp-input-box" cols="60" rows="5"></textarea>
+  <textarea class="nlp-input-box" cols="60" rows="5" [value]="content"></textarea>
   <div>
     <button>Process</button>
   </div>
