--- a/ui/src/app/visual-nlp/visual-nlp.component.html
+++ b/ui/src/app/visual-nlp/visual-nlp.component.html
@@ -1,5 +1,5 @@
-
 <div>
-  <app-nlp-input></app-nlp-input>
-    <app-part-of-speech></app-part-of-speech>
+  <app-nlp-input
+  [content]="nlpInput"></app-nlp-input>
+  <app-part-of-speech></app-part-of-speech>
 </div>
