nlp-input bind to ngModel

--- a/ui/src/app/nlp-input/nlp-input.component.html
+++ b/ui/src/app/nlp-input/nlp-input.component.html
@@ -1,6 +1,6 @@
 <div class="nlp-input">
-  <textarea class="nlp-input-box" cols="60" rows="5" [value]="content"></textarea>
+  <textarea class="nlp-input-box" cols="60" rows="5" [(ngModel)]="content"></textarea>
   <div>
-    <button>Process</button>
+    <button (click)="onProcessButtonClicked()">Process</button>
   </div>
 </div>
