--- a/ui/src/app/visual-nlp/visual-nlp.component.html
+++ b/ui/src/app/visual-nlp/visual-nlp.component.html
@@ -2,5 +2,5 @@
   <app-nlp-input
   [content]="nlpInputText"
   (submit)="onSubmitTextToProcess($event)"></app-nlp-input>
-  <app-part-of-speech></app-part-of-speech>
+  <app-pos-sentence></app-pos-sentence>
 </div>
