--- a/ui/src/app/pos-token/pos-token.component.html
+++ b/ui/src/app/pos-token/pos-token.component.html
@@ -1,5 +1,5 @@
 <div class="pos-component">
-  <label class="pos-tag">{{pos.tag}}</label>
+  <label class="pos-token">{{pos.tag}}</label>
   <div>
     <label class="pos-token">{{pos.token}}</label>
   </div>
