--- a/ui/src/app/visual-nlp/visual-nlp.component.html
+++ b/ui/src/app/visual-nlp/visual-nlp.component.html
@@ -2,5 +2,6 @@
   <app-nlp-input
   [content]="nlpInputText"
   (submit)="onSubmitTextToProcess($event)"></app-nlp-input>
-  <app-pos-sentence></app-pos-sentence>
+  <app-pos-sentence
+  [tokens]="posTokens"></app-pos-sentence>
 </div>
