--- a/ui/src/app/pos-token/pos-token.component.css
+++ b/ui/src/app/pos-token/pos-token.component.css
@@ -1,15 +1,15 @@
-.pos-component {
+.pos-token {
   text-align: center;
 }
 
-.pos-token {
+.pos-tag {
   background-color: coral;
   border-radius: 8px;
   padding: 1px;
   padding-left: 5px;
   padding-right: 5px;
 }
-.pos-token {
+.pos-text {
   background-color: cornflowerblue;
   border-radius: 8px;
   padding: 1px;
