display all tokens

--- a/ui/src/app/visual-nlp/visual-nlp.component.html
+++ b/ui/src/app/visual-nlp/visual-nlp.component.html
@@ -3,5 +3,5 @@
   [content]="nlpInputText"
   (submit)="onSubmitTextToProcess($event)"></app-nlp-input>
   <app-pos-sentence
-  [tokens]="posTokens"></app-pos-sentence>
+  [tokens]="nlpResults.partOfSpeech"></app-pos-sentence>
 </div>
