--- a/ui/src/app/pos-sentence/pos-sentence.component.html
+++ b/ui/src/app/pos-sentence/pos-sentence.component.html
@@ -1,2 +1,4 @@
-<app-pos-token
-        [pos]='tokens[0]'></app-pos-token>
+<div>
+  <label *ngFor="let token of tokens"><app-pos-token [pos]='token'></app-pos-token></label>
+</div>
+
