fix pos-sentence layout

--- a/ui/src/app/nlp-input/nlp-input.component.html
+++ b/ui/src/app/nlp-input/nlp-input.component.html
@@ -1,4 +1,4 @@
-<div class="nlp-input">
+<div>
   <textarea class="nlp-input-box" cols="60" rows="5" [(ngModel)]="content"></textarea>
   <div>
     <button (click)="onProcessButtonClicked()">Process</button>
