--- a/ui/src/app/pos-token/pos-token.component.css
+++ b/ui/src/app/pos-token/pos-token.component.css
@@ -8,11 +8,5 @@
   padding: 1px;
   padding-left: 5px;
   padding-right: 5px;
-}
-.pos-text {
-  background-color: cornflowerblue;
-  border-radius: 8px;
-  padding: 1px;
-  padding-left: 5px;
-  padding-right: 5px;
+  font-size: 10px;
 }
