--- a/ui/src/app/visual-nlp/visual-nlp.component.html
+++ b/ui/src/app/visual-nlp/visual-nlp.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="visual-nlp">
   <app-nlp-input
   [content]="nlpInputText"
   (submit)="onSubmitTextToProcess($event)"></app-nlp-input>
