--- a/ui/src/app/pos-token/pos-token.component.html
+++ b/ui/src/app/pos-token/pos-token.component.html
@@ -1,6 +1,6 @@
 <div class="pos-token">
   <label class="pos-tag">{{pos && pos.tag}}</label>
   <div>
-    <label class="pos-text">{{pos && pos.token}}</label>
+    <label>{{pos && pos.token}}</label>
   </div>
 </div>
